showing only ip line as orange

--- a/startpage.html
+++ b/startpage.html
@@ -42,10 +42,11 @@
   </p>
     <p>
   <center>
-  <h3>  Here are some things for proof:
+  Here are some things for proof:
   <br />
   <!-- IP checking script -->
-    <script type="application/javascript">
+    <h3>
+      <script type="application/javascript">
       function getIP(json) {
         document.write("Your public IP: ", json.ip);
       }
