fixed reveal button

--- a/jukepi.html
+++ b/jukepi.html
@@ -100,7 +100,7 @@
         x.style.display = "none";
       }
     }
-     function mixhat() {
+     function mixchat() {
       var x = document.getElementById("mixchat");
       if (x.style.display === "none") {
         x.style.display = "block";
