--- a/posts.html
+++ b/posts.html
@@ -26,7 +26,7 @@
 </head>
 
   <body>
-  <center><img src="images/phantom_inc.JPG" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
+  <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
     <p>
       <center>
   <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a></li>
