--- a/startpage.html
+++ b/startpage.html
@@ -58,12 +58,9 @@
    <!-- Speedtest using custom URL -->
    <center><button onclick="speedtest()"> Speedtest </button>
    <div id="speedtest">
-     <iframe width="40%" height="600px" frameborder="0" src="https://phantominc.speedtestcustom.com">
-     </iframe>
-   </div>
-   </center>
+     <iframe width="40%" height="600px" frameborder="0" src="https://phantominc.speedtestcustom.com"></iframe>
    <script>
-   function twitchfeed() {
+   function speedtest() {
      var x = document.getElementById("speedtest");
      if (x.style.display === "none") {
        x.style.display = "block";
@@ -71,7 +68,9 @@
        x.style.display = "none";
      }
    }
-</script>
+  </script>
+  </div>
+ </center>
   </body>
 
   <footer>
