--- a/startpage.html
+++ b/startpage.html
@@ -22,7 +22,12 @@
 
     gtag('config', 'UA-122993902-1');
   </script>
-
+  <!--Quick little hack for speedtest -->
+   <style>
+   .st {
+     display:none;
+   }
+   </style>
 </head>
 
 <body>
@@ -57,7 +62,7 @@
    </p>
    <!-- Speedtest using custom URL -->
    <center><button onclick="speedtest()"> Speedtest </button>
-   <div id="speedtest">
+   <div id="speedtest" class="st">
      <iframe width="100%" height="615px" frameborder="0" src="https://phantominc.speedtestcustom.com"></iframe>
    <script>
    function speedtest() {
