--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,11 @@
   <p>
     <center>
   <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a></li>
-  <li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
-  <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
+  <!--li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li-->
+  <!--li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li-->
   <!--li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li-->
-  <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
-  <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li>
+  <!--li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li-->
+  <!--li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li-->
   </center>
   </p>
 
@@ -59,7 +59,7 @@
  </body>
 
  <footer>
-   <center><b> &copy; Phantom Inc. 2020 <i class="fas fa-user-astronaut"></i> version: .06 </b></center>
+   <center><b> &copy; Phantom Inc. 2020 <i class="fas fa-user-astronaut"></i> version: .07 </b></center>
  </footer>
 
 </html>
