--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 </br>
   <p>
 <center><h2>About</h2> </center>
-<center>Hello Friend, mad corny but whatever, been making websites from scratch for years. Here is the latest venture back into mostly HTML. Hope you enjoy.</center>
+<center>Hello Friend, mad corny but whatever, been making websites from scratch for years.
+</br>  Here is the latest venture back into mostly HTML. Hope you enjoy.</center>
   </p>
 </br>
   <p><center><h2> - - - </h2></center></p>
