--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <p>
       <center>
   <!-- li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a></li -->
-  <li><a href="https://www.phantominc.net//downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a></li>
-  <li><a href="https://www.phantominc.net//support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a></li>
+  <li><a href="https://www.phantominc.net/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a></li>
+  <li><a href="https://www.phantominc.net/support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a></li>
   <li><a href="https://www.phantominc.net/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a></li>
   <div class="dropdown">
     <button class="menu"><i class="far fa-lemon"></i> Media</button>
