--- a/startpage.html
+++ b/startpage.html
@@ -37,6 +37,7 @@
     <center>
   <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="startmenu"><i class="fab fa-fort-awesome"></i></button></a></li>
   <li><a href="https://www.youtube.com/"><button class="startmenu"><i class="fab fa-youtube"></i></button></a></li>
+  <li><a href="https://www.reddit.com"><button class="startmenu"><i class="fab fa-reddit"></i></button></a></li>
   <li><a href="https://www.amazon.com"><button class="startmenu"><i class="fab fa-amazon"></i></button></a></li>
   <li><a href="https://github.com/jeremysmai"><button class="startmenu"><i class="fab fa-github"></i></button></a></li>
    </center>
