--- a/fearandloathing.html
+++ b/fearandloathing.html
@@ -9,20 +9,18 @@
   <title>Fear And Loathing | GTA RP SERVER</title>
   <link rel="stylesheet" href="css/gta.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
   <!-- Favicon -->
      <link rel=icon href='images/phantomicon.png' sizes="16x16" type="image/png">
    <!-- Mobile Site Fix BB -->
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <script src="scripts/fivemlaunch.js"></script>
-    <style>
-        html{
-      background-image: url("images/gta/01.jpg");
-      background-repeat: no-repeat;
-      background-position: center;
-      background-attachment: fixed;
-    }
-    </style>
+  <style>
+  @keyframes bgrotate {
+    from {background-image: url('images/gta/01.jpg');}
+    to {background-image: url("images/gta/03.jpg");}
+  }
+  </style>
  </head>
 
    <body>
@@ -31,7 +29,7 @@
        <center>
   <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i> phantom inc </button></a></li>
   <li><a href="https://www.phantominc.net/fearandloathinglaunch.html" alt="alt server link"><button class="menu"><i class="far fa-lemon"></i> SERVER</button></a></li>
-  <li><a href="https://www.discord.gg" alt="Discord Link"><button class="menu"><i class="fab fa-discord"></i> Discord </button></a></li>
+  <li><a href="https://discord.gg/DgcRdYb" alt="Discord Link"><button class="menu"><i class="fab fa-discord"></i> Discord </button></a></li>
 <!--
   <div class="dropdown">
     <button class="menu"><i class="far fa-lemon"></i> SERVER </button>
@@ -45,15 +43,23 @@
  </p>
 
  </br>
-</br>
-  <div><h1> Welcome! Currently looking rough but still functional!</h1></div>
-  <center><div>Ready to Join? (Launches FiveM)</div>
-</br>
-  <button onclick="LaunchFivem()" class="menu">Join Now!</button></center>
+
+  <div>
+    <h1>
+      Welcome! Currently looking rough but still functional!
+    </h1>
+  </div>
+
+<h2>
+  Ready to Join? (Launches FiveM)
+<h2>
+<div class="button">
+  <button onclick="LaunchFivem()" class="menu"><i class="fas fa-running"></i> Join Now!</button>
+</div>
 
  </body>
 
  <footer>
-  <center><b> &copy; Phantom Inc. 2020 <i class="fas fa-user-astronaut"></i> version: .07 </b></center>
+  <center><b> &copy; Phantom Inc. 2020 <i class="fas fa-yin-yang fa-pulse"></i> version: 1.0 </b></center>
  </footer>
 </html>
