updated missing icon

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </ul>
     </div>
     <!-- All Posts Button -->
-  <center><a href="posts.html"><button class="postsb"><i class="fas " alt="Old Site"></i> All Posts |' ' | </button></a></center>
+  <center><a href="posts.html"><button class="postsb"><i class="fas fa-yin-yang fa-pulse " alt="Old Site"></i> All Posts |' ' | </button></a></center>
 </body>
 
   <footer>
