--- a/startpage.html
+++ b/startpage.html
@@ -35,11 +35,11 @@
   <center><img src="images/phantom-low.png" class="logo" height="300" width="300" alt="Phantom low Rez" /></center>
   <p>
     <center>
-  <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="startmenu"><i class="fab fa-fort-awesome"></i></button></a></li>
-  <li><a href="https://www.youtube.com/"><button class="startmenu"><i class="fab fa-youtube"></i></button></a></li>
-  <li><a href="https://www.reddit.com"><button class="startmenu"><i class="fab fa-reddit"></i></button></a></li>
-  <li><a href="https://www.amazon.com"><button class="startmenu"><i class="fab fa-amazon"></i></button></a></li>
-  <li><a href="https://github.com/jeremysmai"><button class="startmenu"><i class="fab fa-github"></i></button></a></li>
+  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a>
+  <a href="https://www.youtube.com/"><button class="menu"><i class="fab fa-youtube"></i></button></a>
+  <a href="https://www.reddit.com"><button class="menu"><i class="fab fa-reddit"></i></button></a>
+  <a href="https://www.amazon.com"><button class="menu"><i class="fab fa-amazon"></i></button></a>
+  <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a>
    </center>
   </p>
     <p>
