quick update patching some things

--- a/index.html
+++ b/index.html
@@ -26,28 +26,24 @@
  </script>
 <!-- Start Visual-->
 <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
-  <p>
-    <center>
       <div class="navigation">
       <!-- li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a></li -->
       <a href="https://www.phantominc.net/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
       <a href="https://www.phantominc.net/support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
-     <div class="dropdown">
-      <button class="menu"><i class="far fa-lemon"></i> Media</button>
-       <div class="dropdown-content">
-        <a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i> Flickr</button></a>
-        <a href="https://www.flickr.com/photos/169754369@N03/"><button class="menu"><i class="fab fa-flickr"></i> Flickr |" |</button></a>
-        <a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i> Twitter</button></a>
-        <a href="https://www.instagram.com/phant0m1nc/"><button class="menu"><i class="fab fa-instagram"></i> Instagram</button></a>
-        <a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i> Youtube</button></a>
-        <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i> Github</button></a>
-       </div>
-      </div>
       <a href="https://www.phantominc.net/fearandloathing"><button class="menu"><i class="fas fa-gamepad" alt="GTA RP Server"></i> GTA RP</button></a>
       <a href="https://www.phantominc.net/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
+      <div class="dropdown">
+       <button class="menu"><i class="far fa-lemon"></i> Media</button>
+        <div class="dropdown-content">
+         <a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i> Flickr</button></a>
+         <a href="https://www.flickr.com/photos/169754369@N03/"><button class="menu"><i class="fab fa-flickr"></i> Flickr |" |</button></a>
+         <a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i> Twitter</button></a>
+         <a href="https://www.instagram.com/phant0m1nc/"><button class="menu"><i class="fab fa-instagram"></i> Instagram</button></a>
+         <a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i> Youtube</button></a>
+         <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i> Github</button></a>
+        </div>
+       </div>
     </div>
-     </center>
-    </p>
   </head>
 
   <body>
@@ -69,8 +65,9 @@
          added a small about section above
          &gt; &gt; posted March 2020 &lt; &lt;
     </div>
+  </br>
     <!-- All Posts Button -->
-  <center><a href="posts.html"><button class="postsb"><i class="fas fa-yin-yang fa-pulse " alt="Old Site"></i> All Posts |' ' | </button></a></center>
+  <center><a href="posts.html"><button class="menu"><i class="fas fa-yin-yang fa-pulse " alt="Old Site"></i> All Posts |' ' | </button></a></center>
 </body>
 
   <footer>
