pushing cahced changes - will patch from here

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <div class="dropdown">
        <button class="menu"><i class="far fa-lemon"></i> Media</button>
         <div class="dropdown-content">
-         <a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i> Flickr</button></a>
-         <a href="https://www.flickr.com/photos/169754369@N03/"><button class="menu"><i class="fab fa-flickr"></i> Flickr |" |</button></a>
+         <a href="https://www.flickr.com/people/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i> Flickr</button></a>
+         <a href="https://www.flickr.com/people/169754369@N03/"><button class="menu"><i class="fab fa-flickr"></i> Flickr |" |</button></a>
          <a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i> Twitter</button></a>
          <a href="https://www.instagram.com/phant0m1nc/"><button class="menu"><i class="fab fa-instagram"></i> Instagram</button></a>
          <a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i> Youtube</button></a>
@@ -66,6 +66,7 @@
          &gt; &gt; posted March 2020 &lt; &lt;
     </div>
   </br>
+</br>
     <!-- All Posts Button -->
   <center><a href="posts.html"><button class="menu"><i class="fas fa-yin-yang fa-pulse " alt="Old Site"></i> All Posts |' ' | </button></a></center>
 </body>
