--- a/posts.html
+++ b/posts.html
@@ -29,7 +29,7 @@
     <p>
       <center>
   <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a>
-  <a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a>
+  <a href="https://www.flickr.com/people/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a>
   <a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a>
   <a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a>
   <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a>
