pushing 1.0 for full site

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
   <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
   <p>
     <center>
-  <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a></li>
+  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a>
   <!--li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li-->
   <!--li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li-->
   <!--li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li-->
@@ -40,11 +40,9 @@
     <h1>Contact</h1>
     <center><h4><i>Use the links below to contact me!</i></h4></center>
 <center>
-    <ul>
-      <li><a href="sms:1-414-465-8826"><button class="menu"><i class="fas fa-comments" alt="SMS"></i> Text Me </button></a></li>
-      <li><a href="tel:1-414-465-8826"><button class="menu"><i class="fas fa-phone" alt="Call"></i> Call Me </button></a></li>
-      <li><a href="mailto:contact@phantominc.net?subject=PhantomInc Support"><button class="menu"><i class="fas fa-envelope" alt="Email"></i> Email Me </button></a></li>
-    </ul>
+      <a href="sms:1-414-465-8826"><button class="menu"><i class="fas fa-comments" alt="SMS"></i> Text Me </button></a>
+      <a href="tel:1-414-465-8826"><button class="menu"><i class="fas fa-phone" alt="Call"></i> Call Me </button></a>
+      <a href="mailto:contact@phantominc.net?subject=PhantomInc Support"><button class="menu"><i class="fas fa-envelope" alt="Email"></i> Email Me </button></a>
 </center>
   <br>
 <center>Have discord? Get in contact NOW!</center>
@@ -59,7 +57,7 @@
  </body>
 
  <footer>
-   <center><b> &copy; Phantom Inc. 2020 <i class="fas fa-user-astronaut"></i> version: .07 </b></center>
+   <center><b> &copy; Phantom Inc. 2020 <i class="fas fa-user-astronaut"></i> version: 1.0 </b></center>
  </footer>
 
 </html>
