--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
       <div class="navigation">
       <!-- li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a></li -->
-      <a href="https://www.phantominc.net/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
       <a href="https://www.phantominc.net/support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
+      <a href="https://www.phantominc.net/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
       <a href="https://www.phantominc.net/fearandloathing"><button class="menu"><i class="fas fa-gamepad" alt="GTA RP Server"></i> GTA RP</button></a>
       <a href="https://www.phantominc.net/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
       <div class="dropdown">
@@ -43,30 +43,30 @@
          <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i> Github</button></a>
         </div>
        </div>
-    </div>
+     </div>
   </head>
 
   <body>
 
-</br>
+<br>
   <p>
 <center><h2>About</h2> </center>
 <center>Hello Friend, mad corny but whatever, been making websites from scratch for years.
-</br>  Here is the latest venture back into mostly HTML. Hope you enjoy.</center>
+<br>  Here is the latest venture back into mostly HTML. Hope you enjoy.</center>
   </p>
-</br>
+<br>
   <p><center><h2> - - - </h2></center></p>
-</br>
+<br>
     <!-- Start of Post Section -->
     <div class="update">
     <h2><u>Update 3</u></h2>
-         created a startpage for quick navigation
-         combined buttons together into menu above
-         added a small about section above
+         created a startpage for quick navigation <br>
+         combined buttons together into menu above <br>
+         added a small about section above <br>
          &gt; &gt; posted March 2020 &lt; &lt;
     </div>
-  </br>
-</br>
+  <br>
+<br>
     <!-- All Posts Button -->
   <center><a href="posts.html"><button class="menu"><i class="fas fa-yin-yang fa-pulse " alt="Old Site"></i> All Posts |' ' | </button></a></center>
 </body>
