--- a/support.html
+++ b/support.html
@@ -27,7 +27,7 @@
   <body>
   <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
       <center>
-  <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a></li>
+  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a>
   <!--li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
   <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
   <li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li>
@@ -44,25 +44,19 @@
 <!-- Start Listing them supporting links -->
   <p>
       <h2><u>Websites</u></h2>
-      <ul>
-        <li><a href="https://prism-break.org/en/" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Check Yourself"></i> PRISM? [Stay Safe...] </button></a></li>
-    <li><a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Scan Yourself"></i> Port Scan [Common-All] </button></a></li>
-    <li><a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Know Yourself"></i> NIST Database [Gov. Site] </button></a></li>
-    <li><a href="http://www.icanhazip.com" target="_blank"><button class="menu"><i class="fas fa-globe" alt="IP Yourself"></i> Shows Your IP address </button></a></li>
-      </ul>
+    <a href="https://prism-break.org/en/" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Check Yourself"></i> PRISM? [Stay Safe...] </button></a>
+    <a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Scan Yourself"></i> Port Scan [Common-All] </button></a>
+    <a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Know Yourself"></i> NIST Database [Gov. Site] </button></a>
+    <a href="http://www.icanhazip.com" target="_blank"><button class="menu"><i class="fas fa-globe" alt="IP Yourself"></i> Shows Your IP address </button></a>
  </p>
   <p>
     <h2><u>Reverse Engineering</u></h2>
-    <ul>
-      <li><a href="https://ghidra-sre.org/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Reverse-engineer Yourself"></i> Ghidra [NSA Tool] </button></a></li>
-    </ul>
+      <a href="https://ghidra-sre.org/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Reverse-engineer Yourself"></i> Ghidra [NSA Tool] </button></a>
   </p>
   <p>
       <h2><u>Linux Secuirty Suites</u></h2>
-      <ul>
-    <li><a href="https://www.parrotsec.org/download-security.php" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself"></i> Parrot Security </button></a></li>
-    <li><a href="https://www.kali.org/downloads/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself again"></i> Kali Linux </button></a></li>
-      </ul>
+    <a href="https://www.parrotsec.org/download-security.php" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself"></i> Parrot Security </button></a>
+    <a href="https://www.kali.org/downloads/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself again"></i> Kali Linux </button></a>
   </p>
 
   <center> Need to contact me? <a href="https://jeremysmai.github.io/phantominc/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a></center>
@@ -70,6 +64,6 @@
   </body>
 
   <footer>
-    <center><b> &copy; Phantom Inc. 2020 <i class="fas fa-user-astronaut"></i> version: .07 </b></center>
+    <center><b> &copy; Phantom Inc. 2020 <i class="fas fa-user-astronaut"></i> version: 1.0 </b></center>
   </footer>
 </html>
