--- a/index.html
+++ b/index.html
@@ -32,18 +32,7 @@
       <a href="https://www.phantominc.net/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
       <a href="https://www.phantominc.net/fearandloathing"><button class="menu"><i class="fas fa-gamepad" alt="GTA RP Server"></i> GTA RP</button></a>
       <a href="https://www.phantominc.net/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
-      <div class="dropdown">
-       <button class="menu"><i class="far fa-lemon"></i> Media</button>
-        <div class="dropdown-content">
-         <a href="https://www.flickr.com/people/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i> Flickr</button></a>
-         <a href="https://www.flickr.com/people/169754369@N03/"><button class="menu"><i class="fab fa-flickr"></i> Flickr |" |</button></a>
-         <a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i> Twitter</button></a>
-         <a href="https://www.instagram.com/phant0m1nc/"><button class="menu"><i class="fab fa-instagram"></i> Instagram</button></a>
-         <a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i> Youtube</button></a>
-         <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i> Github</button></a>
-        </div>
-       </div>
-     </div>
+      <a href="https://www.phantominc.net/media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
   </head>
 
   <body>
