some cleaning up around the site, webpage looks a tad cleaner

--- a/downloads.html
+++ b/downloads.html
@@ -28,7 +28,7 @@
   <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
     <p>
       <center>
-  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a>
+  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a>
   <!--li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
   <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
   <li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li>
@@ -46,7 +46,7 @@
     &gt; &gt; updated February 2020 &lt; &lt;
   </p>
   <br>
-    <center><i>If you ever feel my software is that good, feel free to donate using the button below</i></center>
+    <center><h4>If you ever feel my software is that good, feel free to donate using the button below</h4></center>
     <center><a href="https://paypal.me/jeremysmai"><button class="menu"><i class="fas fa-hand-holding-heart" alt="Donate? - this is a test, link is real"></i>Donate</button></a>
     </div>
     </center>
