--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
 <br>
   <p>
-<center><h2>About</h2> </center>
-<center>Hello Friend, mad corny but whatever, been making websites from scratch for years.
+<center><h2></h2> </center>
+<center>Hello and Welcome to Phantom Inc's Official Website!
 <br>  Here is the latest venture back into mostly HTML. Hope you enjoy.</center>
   </p>
 <br>
