update gta rp pages for proper navigation and stats page

--- a/fearandloathinglaunch.html
+++ b/fearandloathinglaunch.html
@@ -24,15 +24,22 @@
         }
        </style>
       <center><img src='images/FearAndLoathing-alpha.png' /></center>
+      <center>
+      <li><a href="https://www.phantominc.net/fearandloathing" alt="secure_yo_self"><button class="menu"><i class="fas fa-reply"></i> back </button></a></li>
+    </center>
     </head>
 
     <body>
+      <p>
       <h2>
       <div class="button">
-        <button onclick="LaunchFivem()" class="menu"><i class="fas fa-cog fa-spin" alt="Redirecting"></i> Join Now!</button>
+        <button onclick="LaunchFivem()" class="menu"><i class="fas fa-door-open" alt="Redirecting"></i> Join Now!</button>
       </div>
-  		<center><h1>~ Click the button above to join... ~ </br></h1></center>
+  		<center><h1>~ Click the button above to join ~ </br></h1></center>
     </h2>
+  </p>
+  <h2>-- Server Stats --</h2>
+  <h3> coming soon </h3>
     </body>
 
   <footer>
