--- a/fearandloathinglaunch.html
+++ b/fearandloathinglaunch.html
@@ -35,11 +35,27 @@
       <div class="button">
         <button onclick="LaunchFivem()" class="menu"><i class="fas fa-door-open" alt="Redirecting"></i> Join Now!</button>
       </div>
-  		<center><h1>~ Click the button above to join ~ </br></h1></center>
+  		<center><h3>~ Click the button above to join ~ </br></h3></center>
     </h2>
   </p>
-  <h2>-- Server Stats --</h2>
+</br>
+  <p>
+    <h2>-- Server Stats --</h2>
+    <center>
+      <table style="width:60%">
+      <tr>
+        <th>User</th>
+        <th>Role</th>
+        <th>Uptime</th>
+      </tr>
+  </table>
   <h3> coming soon </h3>
+</center>
+  </p>
+</br>
+  <p>
+    <center><h4>Server Status : Currently Offline</h4></center>
+  </p>
     </body>
 
   <footer>
