--- a/media.html
+++ b/media.html
@@ -38,12 +38,18 @@
   </br>
     <h4>Links below lead to a bunch of other sites that host some of my other media </h4>
   </br>
-<a href="https://www.flickr.com/people/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i> Flickr</button></a>
-<a href="https://www.flickr.com/people/169754369@N03/"><button class="menu"><i class="fab fa-flickr"></i> Flickr |" |</button></a>
-<a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i> Twitter</button></a>
-<a href="https://www.instagram.com/phant0m1nc/"><button class="menu"><i class="fab fa-instagram"></i> Instagram</button></a>
-<a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i> Youtube</button></a>
+<a href="https://www.flickr.com/people/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i> Flickr </button></a>
+<a href="https://www.flickr.com/people/169754369@N03/"><button class="menu"><i class="fab fa-flickr"></i> Flickr |" | </button></a>
+<a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i> Twitter </button></a>
+<a href="https://www.instagram.com/phant0m1nc/"><button class="menu"><i class="fab fa-instagram"></i> Instagram </button></a>
+</br>
+<a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i> Youtube </button></a>
+<a href="https://vimeo.com/jeremysmai"><button class="menu"><i class="fab fa-vimeo"></i> Vimeo </button></a>
 <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i> Github</button></a>
+</br>
+</br>
+<h4>- - - Latest Upload - - -</h4>
+<iframe src="https://player.vimeo.com/video/478306238" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 </br>
 </br>
 </body>
