final post changes post update 4

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 <br>
     <!-- Start of Post Section -->
     <div class="update">
-    <h2><u>Update 3</u></h2>
-         created a startpage for quick navigation <br>
-         combined buttons together into menu above <br>
-         added a small about section above <br>
-         &gt; &gt; posted March 2020 &lt; &lt;
+      <h2><u>Update 4</u></h2>
+          - Added media page for external links</br>
+          - Added GTARP server page (under construction)</br>
+          - Overall site cleanup and upgrades </br>
+          &gt; &gt; posted November 2020 &lt; &lt; </br>
     </div>
   <br>
 <br>
