--- a/posts.html
+++ b/posts.html
@@ -79,7 +79,8 @@
     </div>
    </br>
  </p>
-  <center> "Hack The Planet!" |'' | </center>
+  <center> "Hack The Planet!" </br>|'' | </center>
+</br>
 </body>
 
 
