--- a/posts.html
+++ b/posts.html
@@ -39,10 +39,12 @@
   <h1>All Posts</h1>
 <p>
 <h2><u>Update 4</u></h2>
-    - Added media page for external links</br>
-    - Added GTARP server page (under construction)</br>
-    - Overall site cleanup and upgrades </br>
+  <ul style="list-style-type:square;">
+    <li> Added media page for external links</li>
+    <li> Added GTARP server page (under construction)</li>
+    <li> Overall site cleanup and upgrades </li>
     &gt; &gt; posted November 2020 &lt; &lt; </br>
+  </ul>
 </p>
 <p>
   <h2><u> Update 3 </u></h2>
