--- a/downloads.html
+++ b/downloads.html
@@ -26,16 +26,11 @@
 
   <body>
   <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
-    <p>
-      <center>
+ <div class="navigation">
   <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a>
-  <!--li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
-  <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
-  <li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li>
-  <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
-  <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li-->
-    </center>
-  </p>
+  <a href="https://www.phantominc.net/startpage"><button class="menu"><i class="fas fa-chess-rook"></i> Startpage</button></a>
+  <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a>
+  </div>
     <!-- Start of Downloads Section -->
   <h2><u>Downloads</u></h2>
   <i>files are zipped for convienece</i><br>
