fixed downloads page, looks cheeky. Updated readme to reflect roadmap

--- a/downloads.html
+++ b/downloads.html
@@ -22,23 +22,43 @@
 
     gtag('config', 'UA-122993902-1');
  </script>
+<center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
+<div class="navigation">
+ <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a>
+ <a href="https://www.phantominc.net/startpage"><button class="menu"><i class="fas fa-chess-rook"></i> Startpage</button></a>
+ <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a>
+ </div>
 </head>
 
   <body>
-  <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
- <div class="navigation">
-  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a>
-  <a href="https://www.phantominc.net/startpage"><button class="menu"><i class="fas fa-chess-rook"></i> Startpage</button></a>
-  <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a>
-  </div>
     <!-- Start of Downloads Section -->
-  <h2><u>Downloads</u></h2>
-  <i>files are zipped for convienece</i><br>
+  <h1><u>Downloads</u></h1>
+  <h4>files are zipped for convienece</h4><br>
+  <center><table>
+  <tr>
+    <th> File </th>
+    <th> Description </th>
+    <th> OS </th>
+  </tr>
+  <tr>
+    <td><a href="https://jeremysmai.github.io/phantominc/downloads/scripts/update.sh.zip">Update.sh </a> </td>
+    <td>Common Linux script, written in bash for quick updating</td>
+    <td> <i class="fab fa-linux"></i> (Linux) </td>
+  </tr>
+  <tr>
+    <td><a href="https://jeremysmai.github.io/phantominc/downloads/bash_profile.zip">.bash_profile </a></td>
+    <td> Want to have a phantom terminal window? </td>
+    <td> <i class="fab fa-apple"></i> (Mac) </td>
+  </tr>
+  <tr>
+    <td><a href="https://jeremysmai.github.io/phantominc/downloads.html">.bashrc </a></td>
+    <td> Coming soon! </td>
+    <td> <i class="fab fa-linux"></i> (Linux) </td>
+  </tr>
+</table>
+</center>
   <p>
-    <a href="https://jeremysmai.github.io/phantominc/downloads/scripts/update.sh.zip">Update.sh </a> // Common Linux script, written in bash for quick updating <br>
-    <a href="https://jeremysmai.github.io/phantominc/downloads/bash_profile.zip">.bash_profile </a> // Want to have a phantom terminal window? (Mac Version) <br>
-    <a href="https://jeremysmai.github.io/phantominc/downloads.html">.bashrc </a> // Coming soon! (Linux) <br>
-    &gt; &gt; updated February 2020 &lt; &lt;
+    &gt; &gt; updated November 2020 &lt; &lt;
   </p>
   <br>
     <center><h4>If you ever feel my software is that good, feel free to donate using the button below</h4></center>
