concept network page

--- a/network.html
+++ b/network.html
@@ -23,21 +23,20 @@
 
     gtag('config', 'UA-122993902-1');
  </script>
+ <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
+<div class="navigation">
+ <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a>
+</div>
 </head>
 
   <body>
-  <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
-
-<center>
-  <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a></li></center>
-
     <p>
 In a future release this will be replaced with Network stats such as IP, ping test packet ratios, stayalive options, port sniffing tests and more! stay tuned. also you shouldn't be here yet, shame on you :P
     </p>
 </body>
 
  <footer>
-    <center><b> &copy; Phantom Inc. 2020 <i class="fas fa-user-astronaut"></i> version: .07 </b></center>
+    <center><b> &copy; Phantom Inc. 2020 <i class="fas fa-user-astronaut"></i> version: 1.0 </b></center>
 </footer>
 
 </html>
