--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <p>
 <center><h2> </h2> </center>
 <center>Hello and Welcome to Phantom Inc's Official Website!
-<br>  Here is the latest venture back into mostly HTML. Hope you enjoy.</center>
+<br>  Here is the latest venture back into mostly HTML and some others. <br>Hope you enjoy.</center>
   </p>
 <br>
   <p><center><h2> - - - </h2></center></p>
