finally added .bashrc file, added new info on Downloads

--- a/downloads.html
+++ b/downloads.html
@@ -25,7 +25,7 @@
 <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
 <div class="navigation">
  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a>
- <a href="https://www.phantominc.net/startpage"><button class="menu"><i class="fas fa-chess-rook"></i> Startpage</button></a>
+ <a href="https://www.phantominc.net/startpage"><button class="menu"><i class="fas fa-chess-rook"></i> Start</button></a>
  <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a>
  </div>
 </head>
@@ -37,28 +37,36 @@
   <center><table>
   <tr>
     <th> File </th>
+    <th> Version </th>
     <th> Description </th>
     <th> OS </th>
   </tr>
   <tr>
     <td><a href="https://jeremysmai.github.io/phantominc/downloads/scripts/update.sh.zip">Update.sh </a> </td>
+    <td> 0.1 </td>
     <td>Common Linux script, written in bash for quick updating</td>
-    <td> <i class="fab fa-linux"></i> (Linux) </td>
+    <td><i class="fab fa-linux"></i> (Linux)</td>
   </tr>
   <tr>
     <td><a href="https://jeremysmai.github.io/phantominc/downloads/bash_profile.zip">.bash_profile </a></td>
-    <td> Want to have a phantom terminal window? </td>
-    <td> <i class="fab fa-apple"></i> (Mac) </td>
+    <td> 0.1 </td>
+    <td> Want to have a phantom ascii terminal window? </td>
+    <td><i class="fab fa-apple"></i> (Mac)</td>
   </tr>
   <tr>
-    <td><a href="https://jeremysmai.github.io/phantominc/downloads.html">.bashrc </a></td>
-    <td> Coming soon! </td>
-    <td> <i class="fab fa-linux"></i> (Linux) </td>
+    <td><a href="https://jeremysmai.github.io/phantominc/downloads/.bashrc.zip">.bashrc </a></td>
+    <td> 0.1 </td>
+    <td> Want the phantom ascii art in terminal, on linux?!? </td>
+    <td><i class="fab fa-linux"></i> (Linux)</td>
   </tr>
 </table>
 </center>
   <p>
     &gt; &gt; updated November 2020 &lt; &lt;
+  </p>
+  <p>
+    <!--<a href="#"><button class="menu"><i class="fas fa-bars"></i> How To's </button></a> -->
+    <!-- Place How To Guide Inline here, button reveals more buttons, walkthrough style -->
   </p>
   <br>
     <center><h4>If you ever feel my software is that good, feel free to donate using the button below</h4></center>
