--- a/downloads.html
+++ b/downloads.html
@@ -54,7 +54,7 @@
     <td><i class="fab fa-apple"></i> (Mac)</td>
   </tr>
   <tr>
-    <td><a href="https://jeremysmai.github.io/phantominc/downloads/.bashrc.zip">.bashrc </a></td>
+    <td><a href="https://jeremysmai.github.io/phantominc/downloads/bashrc.zip">.bashrc </a></td>
     <td> 0.1 </td>
     <td> Want the phantom ascii art in terminal, on linux?!? </td>
     <td><i class="fab fa-linux"></i> (Linux)</td>
