--- a/media.html
+++ b/media.html
@@ -23,19 +23,14 @@
       gtag('config', 'UA-122993902-1');
     </script>
     <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
-        <center>
+  <div class="navigation">
     <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a>
-    <!--li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
-    <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
-    <li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li>
-    <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
-    <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li -->
-  </center>
+  </div>
 </head>
   <body>
-  </br>
+    <p>
     <h1>Media</h1>
-  </br>
+  </p>
     <h4>Links below lead to a bunch of other sites that host some of my other media </h4>
   </br>
 <a href="https://www.flickr.com/people/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i> Flickr </button></a>
