fixed formatting and themed gta server page

--- a/fearandloathing.html
+++ b/fearandloathing.html
@@ -20,11 +20,16 @@
     from {background-image: url('images/gta/01.jpg');}
     to {background-image: url("images/gta/03.jpg");}
   }
+
+  img {
+    width: 75%;
+    height: auto;
+  }
   </style>
+  <center><img src="images/FearAndLoathing-alpha.png" width="1000" height="210" class="logo" alt="Server Logo" /></center>
  </head>
 
    <body>
-   <center><img src="images/FearAndLoathing-alpha.png" class="logo" alt="Server Logo" /></center>
      <p>
        <center>
   <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i> phantom inc </button></a></li>
@@ -49,13 +54,19 @@
       Welcome! Currently looking rough but still functional!
     </h1>
   </div>
-
-<h2>
-  Ready to Join? (Launches FiveM)
-<h2>
-<div class="button">
+</br>
+<p>
+  <h2>
+  Must Know what FiveM is and have it running to allow the button below work.
+</h2>
+</p>
+<br>
+<center><div class="button">
   <button onclick="LaunchFivem()" class="menu"><i class="fas fa-running"></i> Join Now!</button>
-</div>
+</div></center>
+<h3>
+  Ready to Join? (Launches FiveM)
+</h3>
 
  </body>
 
