--- a/fearandloathinglaunch.html
+++ b/fearandloathinglaunch.html
@@ -16,20 +16,26 @@
        <!-- Scripts Below me BB -->
         <script src="scripts/fivemlaunch.js"></script>
         <style>
-            html{
+            html {
           background-image: url("images/gta/07.jpg");
           background-repeat: no-repeat;
           background-position: 80%;
           background-attachment: fixed;
         }
+         img {
+            width: 75%;
+            height: auto;
+          }
        </style>
-      <center><img src='images/FearAndLoathing-alpha.png' /></center>
-      <center>
-      <li><a href="https://www.phantominc.net/fearandloathing" alt="secure_yo_self"><button class="menu"><i class="fas fa-reply"></i> back </button></a></li>
-    </center>
+    <center><img src="images/FearAndLoathing-alpha.png" width="1000" height="210" class="logo" alt="Server Logo" /></center>
     </head>
 
     <body>
+      <p>
+      <center>
+      <a href="https://www.phantominc.net/fearandloathing" alt="secure_yo_self"><button class="menu"><i class="fas fa-reply"></i> back </button></a>
+    </center>
+  </p>
       <p>
       <h2>
       <div class="button">
@@ -40,7 +46,7 @@
   </p>
 </br>
   <p>
-    <h2>-- Server Stats --</h2>
+    <h1>-- Server Stats --</h1>
     <center>
       <table style="width:60%">
       <tr>
