fixed some downloads, list css added

--- a/downloads.html
+++ b/downloads.html
@@ -55,14 +55,19 @@
   </tr>
   <tr>
     <td><a href="https://jeremysmai.github.io/phantominc/downloads/bashrc.zip">.bashrc </a></td>
-    <td> 0.1 </td>
+    <td> 0.2 </td>
     <td> Want the phantom ascii art in terminal, on linux?!? </td>
     <td><i class="fab fa-linux"></i> (Linux)</td>
   </tr>
 </table>
 </center>
   <p>
+    <h4> Recent Updates </h4>
+    <ul>
+      <li> Fixed update.sh script for autoremove feature </li>
+      <li> Fixed SCP issue in .basrc script, actually works </li>
     &gt; &gt; updated November 2020 &lt; &lt;
+  </ul>
   </p>
   <p>
     <!--<a href="#"><button class="menu"><i class="fas fa-bars"></i> How To's </button></a> -->
