added new downloads table

--- a/downloads.html
+++ b/downloads.html
@@ -34,6 +34,32 @@
     <!-- Start of Downloads Section -->
   <h1><u>Downloads</u></h1>
   <h4>files are zipped for convienece</h4><br>
+<!-- Games Table Section  -->
+  <br>
+<h2>Games</h2>
+<center>
+  <table>
+    <tr>
+      <th>Title</th>
+      <th>Description</th>
+      <th>OS - Requirements</th>
+    </tr>
+    <tr>
+      <td> TBD </td>
+      <td> TBD </td>
+      <td><i class="fab fa-linux"></i> (Linux)</td>
+    </tr>
+    <tr>
+      <td>Coming Soon</td>
+      <td>Quick Game Jam based in Pygame? We'll See...</td>
+      <td><i class="fab fa-raspberry-pi"></i> Raspberry Pi</td>
+    </tr>
+  </table>
+</center>
+
+<!-- Utilities Table Section -->
+  <br>
+  <h2>Utilities</h2>
   <center><table>
   <tr>
     <th> File </th>
