fixed fontawesome js on all pages, removed unecessary css

--- a/downloads.html
+++ b/downloads.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/main.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <!-- Fontawesome API code goes here :D -->
+    <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
       <link rel=icon href=images/phantomicon.png sizes="16x16" type="image/png">
     <!-- Mobile Site Fix BB -->
@@ -34,6 +36,15 @@
     <!-- Start of Downloads Section -->
   <h1><u>Downloads</u></h1>
   <h4>files are zipped for convienece</h4><br>
+ <p>
+   <h4> Recent Updates </h4>
+     <ul>
+      <li> Added new Game Downloads Section </li>
+      <li> Fixed update.sh script for autoremove feature </li>
+      <li> Fixed SCP issue in .basrc script, actually works </li>
+    &gt; &gt; updated November 2020 &lt; &lt;
+    </ul>
+ </p>
 <!-- Games Table Section  -->
   <br>
 <h2>Games</h2>
@@ -42,7 +53,7 @@
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>OS - Requirements</th>
+      <th>OS/Requirements</th>
     </tr>
     <tr>
       <td> TBD </td>
@@ -87,21 +98,14 @@
   </tr>
 </table>
 </center>
-  <p>
-    <h4> Recent Updates </h4>
-    <ul>
-      <li> Fixed update.sh script for autoremove feature </li>
-      <li> Fixed SCP issue in .basrc script, actually works </li>
-    &gt; &gt; updated November 2020 &lt; &lt;
-  </ul>
-  </p>
+<br>
   <p>
     <!--<a href="#"><button class="menu"><i class="fas fa-bars"></i> How To's </button></a> -->
     <!-- Place How To Guide Inline here, button reveals more buttons, walkthrough style -->
   </p>
   <br>
     <center><h4>If you ever feel my software is that good, feel free to donate using the button below</h4></center>
-    <center><a href="https://paypal.me/jeremysmai"><button class="menu"><i class="fas fa-hand-holding-heart" alt="Donate? - this is a test, link is real"></i>Donate</button></a>
+    <center><a href="https://paypal.me/jeremysmai"><button class="menu"><i class="fas fa-hand-holding-heart" alt="Donate?"></i> Donate</button></a>
     </div>
     </center>
     <br>
