updated table to reflect gtarp server and change post on index

--- a/index.html
+++ b/index.html
@@ -48,14 +48,16 @@
   <p><center><h2> - - - </h2></center></p>
 <br>
     <!-- Start of Post Section -->
-    <div class="update">
-      <h2><u>Update 4</u></h2>
-          - Added media page for external links</br>
-          - Added GTARP server page (under construction)</br>
-          - Overall site cleanup and upgrades </br>
-          &gt; &gt; posted November 2020 &lt; &lt; </br>
-    </div>
-  <br>
+    <p>
+     <h2>Update 4</h2>
+    <ul>
+      <li> Updated Downloads page, added new look and items</li>
+      <li> Added media page for external links</li>
+      <li> Added GTARP server page (under construction)</li>
+      <li> Overall site cleanup and upgrades </li>
+      &gt; &gt; posted November 2020 &lt; &lt;
+    </ul>
+  </p>
 <br>
     <!-- All Posts Button -->
   <center><a href="posts.html"><button class="menu"><i class="fas fa-yin-yang fa-pulse " alt="Old Site"></i> All Posts |' ' | </button></a></center>
