--- a/posts.html
+++ b/posts.html
@@ -41,6 +41,7 @@
   <p>
    <h2>Update 4</h2>
   <ul>
+    <li> Updated Downloads page, added new look and items</li>
     <li> Added media page for external links</li>
     <li> Added GTARP server page (under construction)</li>
     <li> Overall site cleanup and upgrades </li>
